@@ -1,13 +1,11 @@
 package YAML::Loader;
+use YAML::Mo;
+extends 'YAML::Loader::Base';
 
-use strict;
-use warnings;
-use YAML::Base;
+our $VERSION = '0.78';
+
 use YAML::Loader::Base;
 use YAML::Types;
-
-our $VERSION = '0.72';
-our @ISA     = 'YAML::Loader::Base';
 
 # Context constants
 use constant LEAF       => 1;
