@@ -1,9 +1,8 @@
-package YAML::Tag;
-
 use strict;
 use warnings;
+package YAML::Tag;
 
-our $VERSION = '0.72';
+our $VERSION = '0.78';
 
 use overload '""' => sub { ${$_[0]} };
 
